# kinder-functor

./: .vimrc  Kmett.hs  README.md  doctests.hs  kinder-functor.cabal
